--- a/css/index.css
+++ b/css/index.css
@@ -11,9 +11,9 @@ body {
   min-height: 100vh;
   min-width: 100vw;
   position: relative;
-  background-image: url(img/1.jpg);
+  background-image: url(img/1.jpeg);
   background-repeat: no-repeat;
-  background-size: 2000px 2000px;
+  background-size: 1950px 950px;
 
 }
 
