--- a/css/index.css
+++ b/css/index.css
@@ -11,6 +11,9 @@ body {
   min-height: 100vh;
   min-width: 100vw;
   position: relative;
+  background-image: url(img/1.jpeg);
+  background-size: 2000px 980px ;
+  background-repeat: no-repeat;
 }
 
 /* Header Styles */
