--- a/css/index.css
+++ b/css/index.css
@@ -6,8 +6,9 @@ html, body {
   background: #050133;
   font-family: 'Segoe UI', Arial, sans-serif;
   background-image: url(img/1.jpeg);
-  background-size: 1920px 1080px ;
+  background-position: center center;
   background-repeat: no-repeat;
+  background-size: cover;
 }
 
 body {
