--- a/css/index.css
+++ b/css/index.css
@@ -790,7 +790,7 @@ body {
 
 #button-container button {
   padding: 10px 0;
-  font-size: 15px;
+  font-size: 20px;
   border: 2px solid #FFB84D;
   border-radius: 10px;
   background-color: #6f707433;
@@ -825,10 +825,10 @@ body {
 }
 
 .floating-menu-payloads button {
-  background: transparent;
+  background: rgba(0, 0, 0, 0.2);
   border: none;
   color: white;
-  font-size: 15px;
+  font-size: 30px;
   cursor: pointer;
   padding: 8px 16px;
   border-radius: 5px;
@@ -836,7 +836,8 @@ body {
 }
 
 .floating-menu-payloads button:hover {
-  background-color: rgba(255, 255, 255, 0.2);
+  background-color: rgba(0, 0, 0, 0.484);
+  color: #ffffff;
 }
 
 /* Tools and PS4FW Sections */
