--- a/css/index.css
+++ b/css/index.css
@@ -808,6 +808,46 @@ body {
     color: #222222;
 }
 
+/* Button Container Games */
+#button-container-g {
+  color: #FFF;
+  background-color: #6f707433;
+  border-radius: 18px;
+  width: 80%;
+  height: 20%;
+  margin: 0 auto;
+  border: 1px solid #FFB84D; 
+  padding: 10px; 
+  display: grid;
+  grid-template-columns: repeat(5, 1fr);
+  gap: 20px;
+  overflow-y: auto;
+  position: absolute;
+  top: 40%;
+  left: 5px;
+  right: 5px;
+}
+
+#button-container-g button {
+  padding: 10px 0;
+  font-size: 15px;
+  border: 2px solid #FFB84D;
+  border-radius: 10px;
+  background-color: #6f707433;
+  color: white;
+  cursor: pointer;
+  transition: background-color 0.25s ease;
+  width: 200px;
+  height: 50px;
+  margin: 0 auto;
+  box-sizing: border-box;
+}
+
+#button-container-g button:hover {
+    background-color: #FFB84D;
+    color: #222222;
+}
+
 /* Floating Menu Payloads */
 .floating-menu-payloads {
   position: fixed;
